[package]
name = "github_yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde_yaml = "0.9.30"
regex = "1.10.2"
walkdir = "2.4.0"
rayon = "1.8.0"
indicatif = {version = "*", features = ["rayon"]}
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.0"
